--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
       <title>MedEase</title>
    </head>
    <body>
-      <header class="header" id="header">
+      <header class="header kaushik" id="header">
          <nav class="nav container">
             <a href="#" class="nav__logo" style="font-size: 2vw;">
                Med<span>Ease</span>
